[gd_scene load_steps=8 format=2]

[ext_resource path="res://SellScreen.gd" type="Script" id=1]
[ext_resource path="res://Payout.wav" type="AudioStream" id=2]
[ext_resource path="res://typing-sound.wav" type="AudioStream" id=3]
[ext_resource path="res://ModestSale.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://mini-wakuwaku-maru.otf"

[sub_resource type="DynamicFont" id=2]
size = 40
outline_color = Color( 0.984314, 0.941176, 0.941176, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 55
outline_size = 1
outline_color = Color( 0.984314, 0.941176, 0.941176, 1 )
font_data = SubResource( 1 )

[node name="SellScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="ResultsText" type="RichTextLabel" parent="."]
margin_left = 120.0
margin_top = 555.0
margin_right = 1003.0
margin_bottom = 644.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Based on the current state of the world, your painting sold for"
text = "Based on the current state of the world, your painting sold for"
scroll_active = false

[node name="ThanksText" type="RichTextLabel" parent="."]
margin_left = 238.58
margin_top = 277.944
margin_right = 846.58
margin_bottom = 462.944
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Thanks for playing!"
text = "Thanks for playing!"
scroll_active = false

[node name="GradeText" type="RichTextLabel" parent="."]
margin_left = 419.486
margin_top = 660.162
margin_right = 674.486
margin_bottom = 718.162
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Grade: "
text = "Grade: "
scroll_active = false

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="TransitionTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -9.592

[node name="TextAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -21.204

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -7.573
[connection signal="timeout" from="TextTimer" to="." method="_on_TextTimer_timeout"]
[connection signal="timeout" from="TransitionTimer" to="." method="_on_TransitionTimer_timeout"]
